differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr63304_1.c-5.4.0-1.out.txt
pr63304_1.c:4:9: error: attribute(target("+nothing+simd")) is unknown
 #pragma GCC target ("+nothing+simd, cmodel=small")
         ^
pr63304_1.c:4:9: error: attribute(target(" cmodel=small")) is unknown
pr63304_1.c:19:9: error: attribute(target("cmodel=large")) is unknown
 #pragma GCC target ("cmodel=large")
         ^
